--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     }
   ],
   "require": {
-    "phpmicroservice/pms-frame": "~0.3.3@dev"
+    "phpmicroservice/pms-frame": "~0.3.3@dev",
+    "apache/log4php": "~2.3.0"
   }
 }
